hphp/hack/test/typecheck/iface_require_incompat3.php.exp
File "iface_require_incompat3.php", line 11, characters 20-21:
Failure to satisfy requirement: Super (Typing[4111])
File "iface_require_incompat3.php", line 6, characters 19-28:
Required here
